Clean up further: make model code isolated to 2 blocks

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -155,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "model = tf.keras.models.Sequential(   \n",
+    "#Do it yourself model\n",
+    "model_diy = tf.keras.models.Sequential(   \n",
     "    [\n",
     "     InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
     "     Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
@@ -167,81 +168,19 @@
     "     Dense(1024,input_shape=(24*24*64,1),activation='relu',name='fc1'),\n",
     "     Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
     "    ]\n",
-    ")"
+    ")\n",
+    "\n",
+    "model_diy.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "rP81tUpXaORF"
-   },
-   "outputs": [],
-   "source": [
-    "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 425
-    },
-    "colab_type": "code",
-    "id": "k_KuMIRrfQKj",
-    "outputId": "34801006-d971-4e14-c454-552ef3d2cb38"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv1 (Conv2D)               (None, 48, 48, 32)        320       \n",
-      "_________________________________________________________________\n",
-      "conv2 (Conv2D)               (None, 48, 48, 32)        9248      \n",
-      "_________________________________________________________________\n",
-      "maxpool1 (MaxPooling2D)      (None, 24, 24, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv3 (Conv2D)               (None, 24, 24, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "conv4 (Conv2D)               (None, 24, 24, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 36864)             0         \n",
-      "_________________________________________________________________\n",
-      "fc1 (Dense)                  (None, 1024)              37749760  \n",
-      "_________________________________________________________________\n",
-      "fc-softmax (Dense)           (None, 7)                 7175      \n",
-      "=================================================================\n",
-      "Total params: 37,821,927\n",
-      "Trainable params: 37,821,927\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 391
-    },
-    "colab_type": "code",
-    "id": "a_WbRvBwfRlA",
-    "outputId": "9c6eb46a-9fc0-4882-c49a-20708c2b161b"
+    "id": "iKzZuMBafv0a",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -250,81 +189,42 @@
      "text": [
       "Train on 28709 samples\n",
       "Epoch 1/10\n",
-      "28709/28709 [==============================] - 92s 3ms/sample - loss: 1.5997 - accuracy: 0.3674\n",
+      "28709/28709 [==============================] - 31s 1ms/sample - loss: 1.6169 - accuracy: 0.3560\n",
       "Epoch 2/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 1.2936 - accuracy: 0.5067\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 1.2887 - accuracy: 0.5052\n",
       "Epoch 3/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.9818 - accuracy: 0.6314\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.9898 - accuracy: 0.6281\n",
       "Epoch 4/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.5055 - accuracy: 0.8225\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.5047 - accuracy: 0.8236\n",
       "Epoch 5/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.1582 - accuracy: 0.9560\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.1463 - accuracy: 0.9610\n",
       "Epoch 6/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0822 - accuracy: 0.9833\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0765 - accuracy: 0.9844\n",
       "Epoch 7/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0609 - accuracy: 0.9892\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0549 - accuracy: 0.9911\n",
       "Epoch 8/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0513 - accuracy: 0.9904\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0530 - accuracy: 0.9907\n",
       "Epoch 9/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0574 - accuracy: 0.9886\n",
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0580 - accuracy: 0.9888\n",
       "Epoch 10/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0468 - accuracy: 0.9914\n"
+      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0478 - accuracy: 0.9902\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fec7ff85b38>"
+       "0.5369183616606297"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train,y_train,batch_size=32,epochs=10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "iKzZuMBafv0a"
-   },
-   "outputs": [],
-   "source": [
-    "y_hat_dev = np.argmax(model.predict(X_dev), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "qS5D2ykHhgCz",
-    "outputId": "69badeee-4c98-4797-8d18-80e99fe217ca",
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5182502089718585"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "model_diy.fit(X_train,y_train,batch_size=32,epochs=10)\n",
+    "y_hat_dev = np.argmax(model_diy.predict(X_dev), axis=1)\n",
+    "\n",
     "import sklearn.metrics as sm\n",
     "sm.accuracy_score(y_hat_dev, y_dev)"
    ]
