Added dropout/batchnorm to model_diy

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -22,14 +22,22 @@
     "id": "gwdg7Sv3XBaP",
     "outputId": "67a02583-ad88-4944-8cef-2aa337461771"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%tensorflow_version` not found.\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip3 install tensorflow-gpu==2.0  #unnecessary on aws if using conda_tensorflow2_p36"
+    "%tensorflow_version 2.x #!pip3 install tensorflow-gpu==2.0  #unnecessary on aws if using conda_tensorflow2_p36"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -43,7 +51,7 @@
     "import sklearn.metrics as sm\n",
     "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Conv2D, InputLayer, MaxPool2D\n",
+    "from tensorflow.keras.layers import *\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -147,35 +155,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Yi3lopGhZIuT"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy after training\n"
+     ]
+    }
+   ],
    "source": [
     "#Do it yourself model\n",
-    "model_diy = tf.keras.models.Sequential(   \n",
-    "    [\n",
-    "     InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
-    "     Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
-    "     Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv2\"),\n",
-    "     MaxPool2D(pool_size=(2,2),name=\"maxpool1\"),\n",
-    "     Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv3\"),\n",
-    "     Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv4\"),\n",
-    "     Flatten(),\n",
-    "     Dense(1024,input_shape=(24*24*64,1),activation='relu',name='fc1'),\n",
-    "     Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
-    "    ]\n",
-    ")\n",
+    "model_diy = tf.keras.models.Sequential([\n",
+    "    InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
+    "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
+    "    Dropout(0.25), BatchNormalization(),\n",
+    "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv2\"),\n",
+    "    Dropout(0.25), BatchNormalization(),\n",
+    "    MaxPool2D(pool_size=(2,2),name=\"maxpool1\"),\n",
+    "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv3\"),\n",
+    "    Dropout(0.25), BatchNormalization(),\n",
+    "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv4\"),\n",
+    "    Dropout(0.25), BatchNormalization(),\n",
+    "    Flatten(),\n",
+    "    Dense(1024,input_shape=(24*24*64,1),activation='relu',name='fc1'),\n",
+    "    Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
+    "])\n",
     "\n",
+    "print(\"Accuracy after training\")\n",
     "model_diy.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -188,44 +207,33 @@
      "output_type": "stream",
      "text": [
       "Train on 28709 samples\n",
-      "Epoch 1/10\n",
-      "28709/28709 [==============================] - 31s 1ms/sample - loss: 1.6169 - accuracy: 0.3560\n",
-      "Epoch 2/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 1.2887 - accuracy: 0.5052\n",
-      "Epoch 3/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.9898 - accuracy: 0.6281\n",
-      "Epoch 4/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.5047 - accuracy: 0.8236\n",
-      "Epoch 5/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.1463 - accuracy: 0.9610\n",
-      "Epoch 6/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0765 - accuracy: 0.9844\n",
-      "Epoch 7/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0549 - accuracy: 0.9911\n",
-      "Epoch 8/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0530 - accuracy: 0.9907\n",
-      "Epoch 9/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0580 - accuracy: 0.9888\n",
-      "Epoch 10/10\n",
-      "28709/28709 [==============================] - 30s 1ms/sample - loss: 0.0478 - accuracy: 0.9902\n"
+      "Epoch 1/5\n",
+      "28709/28709 [==============================] - 36s 1ms/sample - loss: 0.2595 - accuracy: 0.9128\n",
+      "Epoch 2/5\n",
+      "28709/28709 [==============================] - 36s 1ms/sample - loss: 0.2550 - accuracy: 0.9184\n",
+      "Epoch 3/5\n",
+      "28709/28709 [==============================] - 36s 1ms/sample - loss: 0.1949 - accuracy: 0.9386\n",
+      "Epoch 4/5\n",
+      "28709/28709 [==============================] - 36s 1ms/sample - loss: 0.1831 - accuracy: 0.9422\n",
+      "Epoch 5/5\n",
+      "28709/28709 [==============================] - 36s 1ms/sample - loss: 0.1590 - accuracy: 0.9495\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5369183616606297"
+       "0.539704653106715"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_diy.fit(X_train,y_train,batch_size=32,epochs=10)\n",
+    "model_diy.fit(X_train,y_train,batch_size=32,epochs=5)\n",
     "y_hat_dev = np.argmax(model_diy.predict(X_dev), axis=1)\n",
     "\n",
-    "import sklearn.metrics as sm\n",
     "sm.accuracy_score(y_hat_dev, y_dev)"
    ]
   },
